# agent-blackbox-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: scenarios.json
notebooks/: 01_agentdojo_victim.ipynb  02_mini_swe_agent_victim.ipynb  03_openhands_victim.ipynb  agent_target_smoke_tests.ipynb
src/agent_blackbox_lab/: __init__.py  agent.py  attacks.py  cli.py  config.py  evaluator.py  guardrails.py  layer_events.py  metrics.py  models.py  penetration.py  scenarios.py  targets.py  tools.py
tests/: test_lab.py
