[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-blackbox-lab"
version = "0.1.0"
description = "A minimal lab for hard-label black-box attacks against tool-using agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mingze Ni" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
agent-blackbox-lab = "agent_blackbox_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_blackbox_lab = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
